fix(bug): include 0 as bisskey number

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "is-bisskey",
   "description": "Check wether string is Bisskey code or not",
+  "version": "1.0.1",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "author": {
