--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "is-bisskey",
   "description": "Check wether string is Bisskey code or not",
-  "version": "1.0.1",
-  "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
+  "version": "1.0.2",
+  "main": "./dist/index.js",
+  "typings": "./dist/index.d.ts",
   "author": {
     "name": "Roman Masyhar",
     "email": "mhrohman@live.com"
